# salesforce_id_converter

./: .travis.yml  LICENSE  README.md  main.py  setup.cfg  setup.py
salesforce_id_converter/: cli.py  converter.py  test_converter.py  utils.py
tests/: test_cli.py  test_converter.py
