[metadata]
name = salesforce_id_converter
author = Rustem Saiargaliev
author-email = r.sayargaliev@gmail.com
summary = CLI tool to convert 15 character Salesforce id into a 18 character id
description-file = README.md
home-page = https://github.com/amureki/salesforce_id_converter
python_requires = >=3
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:

[entry_points]
console_scripts =
    sfc = salesforce_id_converter.cli:main
